# vest-lsp

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  typing-rules.md  vest.pest
.github/workflows/: release-extensions.yml  validate-extensions.yml
extensions/vest/: Cargo.toml  README.md  extension.toml  extension.wasm
extensions/vest-vscode/: README.md  extension.js  language-configuration.json  package-lock.json  package.json
extensions/vest-vscode/scripts/: package-vsix.mjs
extensions/vest-vscode/syntaxes/: vest.tmLanguage.json
extensions/vest-zed/: .gitignore  Cargo.toml  README.md  extension.toml  extension.wasm
extensions/vest-zed/languages/vest/: folds.scm  highlights.scm  indents.scm
extensions/vest-zed/scripts/: package-extension.mjs  package-language-server-asset.mjs
extensions/vest-zed/src/: lib.rs
extensions/vest/languages/vest/: config.toml  locals.scm  outline.scm
extensions/vest/src/: lib.rs
scripts/: sync-extension-metadata.mjs
vest_db/: Cargo.toml
vest_db/src/: db.rs  input.rs  lib.rs  parse.rs  source.rs
vest_db/src/hir/: check.rs  hover.rs  lower.rs  mod.rs  names.rs  symbols.rs  types.rs
vest_lsp/: Cargo.toml
vest_lsp/src/: lib.rs  main.rs  server.rs  workspace.rs
vest_syntax/: Cargo.toml  binding.gyp  build.rs  grammar.js  package.json
vest_syntax/bindings/node/: binding.cc  index.js
vest_syntax/bindings/rust/: lib.rs
vest_syntax/queries/: highlights.scm
vest_syntax/src/: grammar.json  lib.rs  node-types.json  parse.rs  parser.c
vest_syntax/test/corpus/: choice.txt  combinators.txt  constraints.txt  enum.txt  length_expr.txt  macros.txt  struct.txt  wrap.txt
