[workspace]
resolver = "2"
members = ["vest_lsp", "vest_syntax", "vest_db"]

[workspace.package]
version = "0.1.2"
edition = "2024"
authors = ["Vest Team"]
license = "MIT"
repository = "https://github.com/y1ca1/vest-lsp"

[workspace.dependencies]
async-lsp = { version = "0.2.3", features = ["tokio"] }
expect-test = "1.5"
lsp-types = "0.95"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "macros", "rt", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
salsa = "0.26"
tree-sitter = "0.25"
tree-sitter-language = "0.1"
