[package]
name = "vest_db"
version.workspace = true
edition.workspace = true
description = "Salsa database for Vest LSP"

[dependencies]
lsp-types = { workspace = true }
salsa = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
vest_syntax = { path = "../vest_syntax" }

[dev-dependencies]
expect-test = { workspace = true }
