[package]
name = "vest_syntax"
version.workspace = true
edition.workspace = true
description = "Tree-sitter grammar for Vest DSL"
build = "build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-language = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }

[build-dependencies]
cc = "1"
